[tool.poetry]
name = "Anansi"
version = "1.0.1"
description = "Tricky and fun ansi text utilities for python programs."
authors = ["skeptycal <skeptycal@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
docopt = "^0.6.2"

[tool.poetry.dev-dependencies]
poetry = "^1.0.2"
pylint = "^2.4.4"
pytest = "^5.3.5"
tox = "^3.14.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
